<resources>
    <string name="app_name">TysonFurniture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_record">Add record</string>
    <string name="delete_all_record">Delete all records</string>
    <string name="hint_furniture">Furniture</string>
    <string name="hint_class">Class</string>
    <string name="no_records_found">No records found</string>
</resources>
